Added privacy, contact, about page, preloader.

--- a/static/css/cv.css
+++ b/static/css/cv.css
@@ -80,6 +80,9 @@ background-color: coral;
   color: #fff;
 }
 
+pre {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 
 @media print {
   * {
