--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -14,7 +14,7 @@ nav ul {
   color: #fff;
   background-color: #66cdaa;
   padding: 8px 0;
-  z-index: 999;
+  z-index: 99;
 }
 
 .container-fluid {
@@ -36,6 +36,7 @@ nav ul li:hover {
 a {
   text-decoration: none;
   color: #fff;
+  font-weight: 600;
 }
 
 a:hover {
@@ -110,4 +111,50 @@ marquee {
 
 .education h4 {
   text-transform: uppercase;
+}
+
+.loader {
+  border-top: 16px solid blue;
+  border-right: 16px solid green;
+  border-bottom: 16px solid red;
+  border-left: 16px solid pink;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 1s linear infinite;
+}
+
+.loader-back {
+  z-index: 9999;
+  display: block;
+  margin: auto;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  inset: 0;
+  background: aqua;
+  position: fixed;
+  animation: fadeOut 1s;
+  animation-fill-mode: forwards;
+}
+
+.loader .hidden {
+  animation: fadeOut 10s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
