--- a/static/css/cv.css
+++ b/static/css/cv.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   -webkit-print-color-adjust: exact !important;
+  color-adjust: exact !important;
 }
 
 .full_name-title {
